<?xml version="1.0"?>
<package format="2">
  <name>sys_stats</name>
  <version>0.0.0</version>
  <description>The sys_stats package</description>

  <maintainer email="andrew.reiter@shield.ai">Andrew Reiter</maintainer>
  <author>Nemanja Boric</author>

  <license>Proprietary, Shield AI</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
